# PRISM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  config_example.json  install_dependencies.sh  main.cpp  requirements.md  structure.md  structure.txt  working_demo
include/: app.h  coredefs.h  extras.h  globaldefinitions.h  linear_regression_calc.h  mqtt_client.h  options_parser.h  sensor.h
include/app/: helpers.h  mainapplication.h
include/cli/: helpers.h  mainapplication.h  variables.h
include/core/: idatamonitor.h  jsonparser.h  measurement.h  objectid.h  randomdatamonitor.h  sensor.h
include/datagenerators/: randomnumberfactory.h
include/gui/: mainwindow.h
src/: app.cpp  extras.cpp  mqtt_client.cpp  options_parser.cpp
src/app/: helpers.cpp  mainapplication.cpp
src/cli/: helpers.cpp  main.cpp  mainapplication.cpp
src/core/: jsonparser.cpp  objectid.cpp  randomdatamonitor.cpp  sensor.cpp
src/datagenerators/: randomnumberfactory.cpp
src/gui/: main.cpp  mainwindow.cpp  mainwindowmoc.cpp
test/: main.cpp  test_measurement.cpp  test_objectid.cpp  test_sensor.cpp
